Bug 1136478 - Fire pagehide / pageshow events in content after swapping remote frame loaders. r=smaug.

--HG--
extra : rebase_source : fbe5ee7bb8aeac7edabb580bcab0254aebcbc1e0